fixed gap in footer section

--- a/project1.css
+++ b/project1.css
@@ -523,7 +523,7 @@ button {
     justify-content: flex-end;
     align-items: flex-start;
     padding: 0px;
-    gap: 105px;
+    gap: 185px;
     height: 38px;
 }
 
